--- a/과제/code/make_one.ipynb
+++ b/과제/code/make_one.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "80ffcab4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from habanero import Crossref"
+    "from habanero import Crossref\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7d806b5b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "057ae72c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +36,7 @@
     "    folder = Path(base_path)\n",
     "    return [f.name for f in folder.iterdir() if f.is_file()]\n",
     "\n",
-    "#e = excel_list()"
+    "e = excel_list()"
    ]
   },
   {
@@ -60,8 +62,8 @@
     "    result = pd.concat(concat_list, axis=0, ignore_index=True)\n",
     "    return result.drop_duplicates(subset=['DOI'])\n",
     "\n",
-    "#m = make_one(e)\n",
-    "#m.to_csv('make_one.csv', index=False)"
+    "m = make_one(e)\n",
+    "m.to_csv('make_one.csv', index=False, quoting=csv.QUOTE_ALL)"
    ]
   },
   {
@@ -72,12 +74,15 @@
    "outputs": [],
    "source": [
     "def add_date(doi):\n",
-    "    paper = Crossref().works(ids = doi)['message']\n",
+    "    try:\n",
+    "        paper = Crossref().works(ids = doi)['message']\n",
+    "    except:\n",
+    "        return np.nan\n",
     "    for field in ['published-print', 'published-online', 'issued', 'created']:\n",
     "        if field in paper:\n",
     "            arr = paper[field]['date-parts'][0]\n",
     "            if len(arr) < 2:\n",
-    "                return pd.Timestamp(year=arr[0], month=1, day=1)\n",
+    "                return pd.Timestamp(year=arr[0], month=np.random.randint(1, 13), day=1)\n",
     "            return pd.Timestamp(year=arr[0], month=arr[1], day=1)\n",
     "    raise Exception(\"발행일 관련 정보가 없습니다.\")\n",
     "\n",
@@ -89,14 +94,6 @@
     "\n",
     "doi_to_date('make_one.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3369a726",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
