--- a/과제/code/make_one.ipynb
+++ b/과제/code/make_one.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "80ffcab4",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from habanero import Crossref\n",
-    "import csv"
+    "from habanero import Crossref"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7d806b5b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "057ae72c",
    "metadata": {},
    "outputs": [],
@@ -36,12 +35,12 @@
     "    folder = Path(base_path)\n",
     "    return [f.name for f in folder.iterdir() if f.is_file()]\n",
     "\n",
-    "e = excel_list()"
+    "#e = excel_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4b19a16f",
    "metadata": {},
    "outputs": [],
@@ -62,13 +61,13 @@
     "    result = pd.concat(concat_list, axis=0, ignore_index=True)\n",
     "    return result.drop_duplicates(subset=['DOI'])\n",
     "\n",
-    "m = make_one(e)\n",
-    "m.to_csv('make_one.csv', index=False, quoting=csv.QUOTE_ALL)"
+    "#m = make_one(e)\n",
+    "#m.to_csv('make_one.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3a5d024c",
    "metadata": {},
    "outputs": [],
@@ -76,29 +75,34 @@
     "def add_date(doi):\n",
     "    try:\n",
     "        paper = Crossref().works(ids = doi)['message']\n",
+    "        date_arr = paper['published-print']['date-parts'][0]\n",
+    "        return pd.Timestamp(year=date_arr[0], month=date_arr[1], day=1)\n",
     "    except:\n",
     "        return np.nan\n",
-    "    for field in ['published-print', 'published-online', 'issued', 'created']:\n",
-    "        if field in paper:\n",
-    "            arr = paper[field]['date-parts'][0]\n",
-    "            if len(arr) < 2:\n",
-    "                return pd.Timestamp(year=arr[0], month=np.random.randint(1, 13), day=1)\n",
-    "            return pd.Timestamp(year=arr[0], month=arr[1], day=1)\n",
-    "    raise Exception(\"발행일 관련 정보가 없습니다.\")\n",
     "\n",
     "def doi_to_date(file_name):\n",
     "    df = pd.read_csv(file_name)\n",
     "    df['Date'] = df['DOI'].apply(add_date)\n",
-    "    df = df.drop(['DOI'])\n",
+    "    df = df.drop(columns = ['DOI'])\n",
+    "    df = df.dropna()\n",
     "    return df\n",
     "\n",
-    "doi_to_date('make_one.csv')"
+    "dt = doi_to_date('make_one.csv')\n",
+    "dt.to_csv('date_one.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359dca35",
+   "id": "eac83edc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "590d1fc3",
    "metadata": {},
    "outputs": [],
    "source": []
