--- a/과제/code/make_one.ipynb
+++ b/과제/code/make_one.ipynb
@@ -72,10 +72,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import date_multi\n",
+    "#import multi\n",
     "\n",
     "#dt = pd.read_csv('make_one.csv')\n",
-    "#dt = date_multi.parallel_fetch(dt)\n",
+    "#dt = multi.df_multi_process(dt, multi.add_date)\n",
     "#dt.to_csv('date_one.csv', index=False)"
    ]
   },
