--- a/과제/code/text_prep.ipynb
+++ b/과제/code/text_prep.ipynb
@@ -2,18 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f7d467f0",
+   "execution_count": null,
+   "id": "79656d40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nltk"
+    "import multi\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "152bf852",
+   "id": "e2fb7def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lda_data = pd.read_csv('date_one.csv')\n",
+    "#lda_data = multi.df_multi_process(lda_data, multi.text_prep, 6)\n",
+    "#lda_data.to_csv('lda_data.csv', index=False)\n",
+    "#lda_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17249494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bertopic_data = pd.read_csv('date_one.csv')\n",
+    "#bertopic_data.to_csv('bertopic_data.csv', index=False)\n",
+    "#bertopic_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13452073",
    "metadata": {},
    "outputs": [],
    "source": []
