--- a/과제/code/crawl.ipynb
+++ b/과제/code/crawl.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "17d801d5",
    "metadata": {},
    "outputs": [],
@@ -37,26 +37,9 @@
     "    while True:\n",
     "        for i in SEQ:\n",
     "            pg.click(*i)\n",
-    "            time.sleep(2)"
+    "            time.sleep(2)\n",
+    "#download()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb01b0d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "download()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0c5a5cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
