--- a/과제/code/make_one.ipynb
+++ b/과제/code/make_one.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "#dt = pd.read_csv('make_one.csv')\n",
     "#dt = multi.df_multi_process(dt, multi.add_date)\n",
-    "#dt.to_csv('date_one.csv', index=False)"
+    "#dt.to_csv('original.csv', index=False)"
    ]
   },
   {
