--- a/과제/code/text_prep.ipynb
+++ b/과제/code/text_prep.ipynb
@@ -18,10 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lda_data = pd.read_csv('date_one.csv')\n",
-    "#lda_data = multi.df_multi_process(lda_data, multi.text_prep, 6)\n",
-    "#lda_data.to_csv('lda_data.csv', index=False)\n",
-    "#lda_data"
+    "def make_lda_data():\n",
+    "    lda_data = pd.read_csv('original.csv')\n",
+    "    lda_data = multi.df_multi_process(lda_data, multi.text_prep, 6)\n",
+    "    lda_data.to_csv('lda_data.csv', index=False)\n",
+    "\n",
+    "#make_lda_data()"
    ]
   },
   {
@@ -31,9 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bertopic_data = pd.read_csv('date_one.csv')\n",
-    "#bertopic_data.to_csv('bertopic_data.csv', index=False)\n",
-    "#bertopic_data"
+    "def make_bertopic_data():\n",
+    "    bertopic_data = pd.read_csv('original.csv')\n",
+    "    bertopic_data.to_csv('bertopic_data.csv', index=False)\n",
+    "\n",
+    "#make_bertopic_data()"
    ]
   },
   {
