--- a/과제/code/crawl_doc_prep.ipynb
+++ b/과제/code/crawl_doc_prep.ipynb
@@ -3,31 +3,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ffcab4",
+   "id": "27c25cae",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pyautogui as pg\n",
+    "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "from habanero import Crossref"
+    "from habanero import Crossref\n",
+    "import multi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d806b5b",
+   "id": "6bc09f83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEXT_PAGE = (540, 608)\n",
+    "EXPORT_BUTTON = (696, 568)\n",
+    "EXCEL = (650, 789)\n",
+    "RECORD_CONTENT_BUTTON = (632, 891)\n",
+    "FULL_EXPORT = (388, 945)\n",
+    "SEQ = [EXPORT_BUTTON, EXCEL, RECORD_CONTENT_BUTTON, FULL_EXPORT, FULL_EXPORT, NEXT_PAGE]\n",
+    "\n",
+    "def download():\n",
+    "    while True:\n",
+    "        for i in SEQ:\n",
+    "            pg.click(*i)\n",
+    "            time.sleep(2)\n",
+    "download()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17d801d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "base_path = 'source/'\n",
-    "use_column = ['Article Title', 'Abstract', 'DOI']"
+    "use_column = ['Article Title', 'Abstract', 'DOI']\n",
+    "file_name = 'origin_data.csv'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057ae72c",
+   "id": "0e8f6928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +61,7 @@
     "    folder = Path(base_path)\n",
     "    return [f.name for f in folder.iterdir() if f.is_file()]\n",
     "\n",
-    "#e = excel_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b19a16f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_one(excel_list):\n",
+    "def prep_concat(excel_list):\n",
     "\n",
     "    concat_list = []\n",
     "\n",
@@ -61,31 +77,27 @@
     "    result = pd.concat(concat_list, axis=0, ignore_index=True)\n",
     "    return result.drop_duplicates(subset=['DOI'])\n",
     "\n",
-    "#m = make_one(e)\n",
-    "#m.to_csv('make_one.csv', index=False)"
+    "def make_one_csv(e, file_name):\n",
+    "    m = prep_concat(e)\n",
+    "    m.to_csv(file_name, index=False)\n",
+    "\n",
+    "#make_one_csv(excel_list(), file_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5d024c",
+   "id": "e2a6a220",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import multi\n",
+    "def make_date_csv(file_name):\n",
+    "    df = pd.read_csv(file_name)\n",
+    "    df = multi.df_multi_process(df, multi.add_date)\n",
+    "    df.to_csv(file_name, index=False)\n",
     "\n",
-    "#dt = pd.read_csv('make_one.csv')\n",
-    "#dt = multi.df_multi_process(dt, multi.add_date)\n",
-    "#dt.to_csv('original.csv', index=False)"
+    "make_date_csv(file_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "590d1fc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
