--- a/과제/code/lda.ipynb
+++ b/과제/code/lda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "f51f380f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "6b270b92",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "4adae451",
    "metadata": {},
    "outputs": [
@@ -39,47 +39,57 @@
        "(10707, 24314)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector = TfidfVectorizer()\n",
+    "vector = CountVectorizer()\n",
     "X = vector.fit_transform(data['Abstract'])\n",
     "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "074aa988",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.32851149 3.61782141 0.3122733  ... 0.16714171 0.27951247 0.39515101]\n",
-      " [0.1666927  0.16717557 0.16669241 ... 0.16666994 0.16669967 0.16669087]\n",
-      " [0.16669429 0.16672372 0.16669398 ... 0.23112542 0.16670169 0.17016151]\n",
-      " [0.16667738 0.16698075 0.16667658 ... 0.16666795 0.16667927 0.16667634]\n",
-      " [0.16669445 0.16709401 0.16669414 ... 0.16667016 0.16670189 0.1666925 ]\n",
-      " [0.16669364 0.1669213  0.16669333 ... 0.16667021 0.16670086 0.16669174]]\n",
-      "(6, 24314)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[1.13673407e-03, 1.13666434e-03, 1.11422444e-01, ...,\n",
+       "        1.13656467e-03, 1.13669495e-03, 1.13652399e-03],\n",
+       "       [3.82386229e-01, 3.25903823e-01, 2.62627181e-01, ...,\n",
+       "        6.33028441e-04, 6.33086634e-04, 6.33035207e-04],\n",
+       "       [1.22418518e-01, 7.93817033e-04, 7.93940372e-04, ...,\n",
+       "        1.54599865e-01, 7.93793819e-04, 7.93766976e-04],\n",
+       "       ...,\n",
+       "       [3.37121640e-01, 1.03113562e-03, 1.03127217e-03, ...,\n",
+       "        1.03104735e-03, 1.03115237e-03, 4.29512873e-02],\n",
+       "       [1.17678050e-03, 1.17664469e-03, 6.49188070e-01, ...,\n",
+       "        6.96587357e-02, 1.58608372e-01, 1.17661088e-03],\n",
+       "       [2.80956365e-01, 2.12818323e-03, 2.83219699e-01, ...,\n",
+       "        2.12789476e-03, 2.12831378e-03, 2.12804692e-03]],\n",
+       "      shape=(10707, 10))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lda_model = LatentDirichletAllocation(n_components=6, learning_method='batch', random_state=0, max_iter=20, n_jobs=-1)\n",
+    "lda_model = LatentDirichletAllocation(n_components=10, learning_method='batch', random_state=0,\n",
+    "                                      max_iter=150, evaluate_every=10, n_jobs=-1)\n",
     "lda_top = lda_model.fit_transform(X)\n",
-    "print(lda_model.components_)\n",
-    "print(lda_model.components_.shape) "
+    "lda_top"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "1b64f9a1",
    "metadata": {},
    "outputs": [
@@ -87,12 +97,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 1: ['model', 'data', 'learn', 'train', 'privacy', 'federate', 'propose', 'clients', 'network', 'local', 'use', 'attack', 'devices', 'communication', 'approach', 'edge', 'performance', 'framework', 'accuracy', 'global']\n",
-      "Topic 2: ['mus', 'lung', 'cancer', 'survival', 'asd', 'diabetes', 'icps', 'breast', 'fedsl', 'dsl', 'bpfl', 'qml', 'flex', 'pruw', 'oncology', 'liver', 'aqi', 'arrhythmia', 'msp', 'cb']\n",
-      "Topic 3: ['evcs', 'satcoms', 'tse', 'descriptors', 'fedgr', 'blur', 'fda', 'pfa', 'bl', 'slimfl', 'pelta', 'invasion', 'satcom', 'flids', 'nsps', 'emg', 'svs', 'tsr', 'cave', 'fedkit']\n",
-      "Topic 4: ['wireless', 'channel', 'problem', 'energy', 'allocation', 'algorithm', 'optimization', 'convergence', 'communication', 'power', 'resource', 'schedule', 'air', 'scheme', 'edge', 'cache', 'transmission', 'latency', 'propose', 'network']\n",
-      "Topic 5: ['asr', 'fedmp', 'dmfl', 'psp', 'cmp', 'maas', 'adl', 'breathe', 'hdfl', 'fft', 'fedcls', 'cbfl', 'fedpec', 'feddc', 'poe', 'qp', 'rpl', 'fedclar', 'fedar', 'nestfl']\n",
-      "Topic 6: ['blade', 'subgraphs', 'trojan', 'svd', 'fedga', 'tsc', 'scf', 'fedcom', 'bim', 'violence', 'orthogonalization', 'subgraph', 'svfl', 'ice', 'omega', 'sias', 'abs', 'fedgroup', 'conformal', 'fan']\n"
+      "Topic 1: ['data', 'model', 'learn', 'federate', 'privacy', 'train', 'propose', 'use', 'user', 'prediction', 'users', 'share', 'approach', 'accuracy', 'result', 'method', 'framework', 'base', 'centralize', 'information']\n",
+      "Topic 2: ['data', 'medical', 'image', 'model', 'learn', 'use', 'healthcare', 'federate', 'study', 'patient', 'health', 'privacy', 'result', 'institutions', 'patients', 'research', 'analysis', 'clinical', 'approach', 'train']\n",
+      "Topic 3: ['learn', 'data', 'federate', 'network', 'iot', 'privacy', 'challenge', 'edge', 'model', 'devices', 'approach', 'machine', 'distribute', 'systems', 'applications', 'security', 'use', 'framework', 'internet', 'process']\n",
+      "Topic 4: ['network', 'learn', 'propose', 'federate', 'reinforcement', 'multi', 'deep', 'agents', 'based', 'algorithm', 'agent', 'satellite', 'improve', 'task', 'use', 'traffic', 'performance', 'framework', 'dfl', 'paper']\n",
+      "Topic 5: ['model', 'train', 'learn', 'communication', 'federate', 'data', 'devices', 'clients', 'local', 'propose', 'server', 'convergence', 'accuracy', 'update', 'reduce', 'client', 'global', 'algorithm', 'distribute', 'performance']\n",
+      "Topic 6: ['model', 'data', 'learn', 'federate', 'clients', 'local', 'train', 'propose', 'client', 'performance', 'global', 'non', 'cluster', 'datasets', 'method', 'iid', 'methods', 'knowledge', 'feature', 'challenge']\n",
+      "Topic 7: ['propose', 'learn', 'edge', 'energy', 'problem', 'network', 'wireless', 'algorithm', 'resource', 'communication', 'scheme', 'train', 'federate', 'model', 'channel', 'result', 'devices', 'optimization', 'base', 'allocation']\n",
+      "Topic 8: ['domain', 'label', 'fault', 'task', 'diagnosis', 'code', 'multi', 'source', 'class', 'semantic', 'supervised', 'target', 'cross', 'unlabeled', 'github', 'feature', 'https', 'available', 'knowledge', 'com']\n",
+      "Topic 9: ['privacy', 'model', 'learn', 'data', 'federate', 'propose', 'train', 'scheme', 'mechanism', 'security', 'secure', 'aggregation', 'local', 'share', 'blockchain', 'differential', 'participants', 'however', 'private', 'result']\n",
+      "Topic 10: ['attack', 'detection', 'model', 'poison', 'malicious', 'network', 'propose', 'detect', 'use', 'defense', 'train', 'intrusion', 'accuracy', 'security', 'backdoor', 'based', 'iiot', 'update', 'adversarial', 'traffic']\n"
      ]
     }
    ],
@@ -110,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad568396",
+   "id": "dbef40b3",
    "metadata": {},
    "outputs": [],
    "source": []
