--- a/과제/code/text_prep.ipynb
+++ b/과제/code/text_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "79656d40",
    "metadata": {},
    "outputs": [],
@@ -42,8 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "13452073",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encoding_change(file_name):\n",
+    "    data = pd.read_csv(file_name, encoding = 'cp949')\n",
+    "    data.to_csv(file_name, index=False)\n",
+    "\n",
+    "encoding_change('lda_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71a1f300",
    "metadata": {},
    "outputs": [],
    "source": []
