--- a/과제/code/lda.ipynb
+++ b/과제/code/lda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "f51f380f",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import pyLDAvis\n",
     "import pyLDAvis.sklearn\n",
     "pyLDAvis.enable_notebook()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "6b270b92",
    "metadata": {},
    "outputs": [],
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "4456fbea",
    "metadata": {},
    "outputs": [],
@@ -41,39 +40,124 @@
     "    df = pd.read_csv(path)\n",
     "    y = df.sample(n=test_count, random_state=42)\n",
     "    x = df.drop(y.index)\n",
-    "    return x.reset_index(drop=True), y.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4adae451",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return x.reset_index(drop=True), y.reset_index(drop=True)\n",
+    "\n",
     "def model_set_train(data, topic_count=5):\n",
     "    vectorizer = CountVectorizer()\n",
     "    X = vectorizer.fit_transform(data)\n",
     "    model = LatentDirichletAllocation(n_components=TOPIC, learning_method='batch', random_state=0,\n",
-    "                                      max_iter=200, evaluate_every=10, n_jobs=-1)\n",
+    "                                      max_iter=10, evaluate_every=0, n_jobs=-1)\n",
     "    result = model.fit_transform(X)\n",
-    "    return model, result, vectorizer"
+    "    return model, result, vectorizer\n",
+    "\n",
+    "def test_predict(test_data, model, vectorizer):\n",
+    "    Y = vectorizer.fit(test_data)\n",
+    "    result = model.fit(Y)\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
+   "id": "406ba531",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article Title</th>\n",
+       "      <th>Abstract</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Two-way Delayed Updates with Model Similarity ...</td>\n",
+       "      <td>great achievement iot wide use edge devices br...</td>\n",
+       "      <td>2023-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bandwidth-Aware and Overlap-Weighted Compressi...</td>\n",
+       "      <td>current compression methods sparsification ave...</td>\n",
+       "      <td>2024-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Multi-Granularity Federated Learning by Graph-...</td>\n",
+       "      <td>edge compute energy-limited distribute edge cl...</td>\n",
+       "      <td>2025-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Multi-provider NFV network service delegation ...</td>\n",
+       "      <td>multi-provider 5g6g network service delegation...</td>\n",
+       "      <td>2023-04-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Asynchronous federated learning with directed ...</td>\n",
+       "      <td>asynchronous afl introduce improve efficiency ...</td>\n",
+       "      <td>2023-08-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Article Title  ...        Date\n",
+       "0  Two-way Delayed Updates with Model Similarity ...  ...  2023-12-01\n",
+       "1  Bandwidth-Aware and Overlap-Weighted Compressi...  ...  2024-08-01\n",
+       "2  Multi-Granularity Federated Learning by Graph-...  ...  2025-01-01\n",
+       "3  Multi-provider NFV network service delegation ...  ...  2023-04-01\n",
+       "4  Asynchronous federated learning with directed ...  ...  2023-08-01\n",
+       "\n",
+       "[5 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y = split_data(PATH, TEST)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "5b9b69af",
    "metadata": {},
    "outputs": [],
    "source": [
     "x, y = split_data(PATH, TEST)\n",
-    "model, topic, vectorizer = model_set_train(x['Abstract'], TOPIC)"
+    "model, topic, vocap = model_set_train(x['Abstract'], TOPIC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "1b64f9a1",
    "metadata": {},
    "outputs": [
@@ -81,24 +165,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 0 : ['privacy', 'train', 'propose', 'share', 'scheme', 'security', 'users', 'accuracy', 'local', 'however', 'information', 'server', 'result', 'blockchain', 'aggregation', 'framework', 'secure', 'use', 'private', 'user']\n",
-      "Topic 1 : ['attack', 'poison', 'train', 'malicious', 'clients', 'propose', 'defense', 'update', 'adversarial', 'byzantine', 'robust', 'backdoor', 'global', 'local', 'detect', 'exist', 'detection', 'participants', 'use', 'distribute']\n",
-      "Topic 2 : ['train', 'clients', 'local', 'propose', 'client', 'performance', 'global', 'datasets', 'non', 'method', 'methods', 'approach', 'privacy', 'use', 'different', 'iid', 'result', 'framework', 'challenge', 'heterogeneity']\n",
-      "Topic 3 : ['privacy', 'use', 'machine', 'network', 'challenge', 'research', 'systems', 'applications', 'approach', 'provide', 'security', 'devices', 'iot', 'distribute', 'paper', 'healthcare', 'present', 'study', 'edge', 'compute']\n",
-      "Topic 4 : ['network', 'propose', 'detection', 'based', 'use', 'iot', 'deep', 'approach', 'traffic', 'vehicles', 'base', 'result', 'framework', 'time', 'edge', 'improve', 'train', 'accuracy', 'privacy', 'performance']\n",
-      "Topic 5 : ['train', 'communication', 'propose', 'devices', 'edge', 'algorithm', 'convergence', 'problem', 'local', 'result', 'performance', 'network', 'time', 'reduce', 'resource', 'wireless', 'energy', 'scheme', 'server', 'optimization']\n"
+      "Topic 0 : ['privacy', 'train', 'propose', 'security', 'share', 'accuracy', 'scheme', 'use', 'local', 'however', 'server', 'information', 'secure', 'result', 'blockchain', 'framework', 'aggregation', 'private', 'attack', 'users']\n",
+      "Topic 1 : ['attack', 'train', 'poison', 'malicious', 'propose', 'clients', 'participants', 'global', 'defense', 'adversarial', 'local', 'update', 'distribute', 'backdoor', 'byzantine', 'robust', 'use', 'exist', 'aggregation', 'detect']\n",
+      "Topic 2 : ['clients', 'train', 'local', 'propose', 'client', 'global', 'performance', 'datasets', 'non', 'method', 'privacy', 'methods', 'use', 'approach', 'different', 'heterogeneity', 'result', 'framework', 'challenge', 'image']\n",
+      "Topic 3 : ['network', 'use', 'privacy', 'machine', 'edge', 'challenge', 'systems', 'applications', 'iot', 'research', 'service', 'provide', 'compute', 'devices', 'security', 'distribute', 'approach', 'paper', 'system', 'present']\n",
+      "Topic 4 : ['network', 'propose', 'train', 'detection', 'approach', 'edge', 'communication', 'based', 'use', 'deep', 'framework', 'base', 'performance', 'result', 'devices', 'time', 'accuracy', 'improve', 'privacy', 'iot']\n",
+      "Topic 5 : ['train', 'propose', 'communication', 'devices', 'edge', 'algorithm', 'problem', 'convergence', 'local', 'result', 'wireless', 'performance', 'scheme', 'time', 'energy', 'optimization', 'base', 'reduce', 'server', 'network']\n"
      ]
     }
    ],
    "source": [
-    "# 단어 집합. 1,000개의 단어가 저장됨.\n",
-    "terms = vectorizer.get_feature_names_out()\n",
+    "def print_topic_word(lda_result, vocap, n=20):\n",
+    "    for idx, topic in enumerate(lda_result):\n",
+    "        print(f\"Topic {idx} :\", [vocap[i] for i in topic.argsort()[::-1][:n]])\n",
     "\n",
-    "def get_topics(components, feature_names, n=20):\n",
-    "    for idx, topic in enumerate(components):\n",
-    "        print(f\"Topic {idx} :\", [feature_names[i] for i in topic.argsort()[:-n - 1:-1]])\n",
-    "\n",
-    "get_topics(model.components_, terms)"
+    "print_topic_word(model.components_, vocap.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ce54260c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'CountVectorizer' object has no attribute 'get_feature_names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m vis_data = \u001b[43mpyLDAvis\u001b[49m\u001b[43m.\u001b[49m\u001b[43msklearn\u001b[49m\u001b[43m.\u001b[49m\u001b[43mprepare\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mAbstract\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvocap\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m pyLDAvis.display(vis_data)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\miniconda3\\envs\\tm\\Lib\\site-packages\\pyLDAvis\\sklearn.py:94\u001b[39m, in \u001b[36mprepare\u001b[39m\u001b[34m(lda_model, dtm, vectorizer, **kwargs)\u001b[39m\n\u001b[32m     62\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mprepare\u001b[39m(lda_model, dtm, vectorizer, **kwargs):\n\u001b[32m     63\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Create Prepared Data from sklearn's LatentDirichletAllocation and CountVectorizer.\u001b[39;00m\n\u001b[32m     64\u001b[39m \n\u001b[32m     65\u001b[39m \u001b[33;03m    Parameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     92\u001b[39m \u001b[33;03m    See `pyLDAvis.prepare` for **kwargs.\u001b[39;00m\n\u001b[32m     93\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m94\u001b[39m     opts = fp.merge(\u001b[43m_extract_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlda_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvectorizer\u001b[49m\u001b[43m)\u001b[49m, kwargs)\n\u001b[32m     95\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m pyLDAvis.prepare(**opts)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\miniconda3\\envs\\tm\\Lib\\site-packages\\pyLDAvis\\sklearn.py:38\u001b[39m, in \u001b[36m_extract_data\u001b[39m\u001b[34m(lda_model, dtm, vectorizer)\u001b[39m\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_extract_data\u001b[39m(lda_model, dtm, vectorizer):\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m     vocab = \u001b[43m_get_vocab\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvectorizer\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     39\u001b[39m     doc_lengths = _get_doc_lengths(dtm)\n\u001b[32m     40\u001b[39m     term_freqs = _get_term_freqs(dtm)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\ProgramData\\miniconda3\\envs\\tm\\Lib\\site-packages\\pyLDAvis\\sklearn.py:20\u001b[39m, in \u001b[36m_get_vocab\u001b[39m\u001b[34m(vectorizer)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_get_vocab\u001b[39m(vectorizer):\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mvectorizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_feature_names\u001b[49m()\n",
+      "\u001b[31mAttributeError\u001b[39m: 'CountVectorizer' object has no attribute 'get_feature_names'"
+     ]
+    }
+   ],
+   "source": [
+    "vis_data = pyLDAvis.sklearn.prepare(model, x['Abstract'], vocap)\n",
+    "pyLDAvis.display(vis_data)"
    ]
   },
   {
