--- a/과제/code/prep.ipynb
+++ b/과제/code/prep.ipynb
@@ -33,17 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#엑셀 파일 리스트 반환\n",
     "def excel_list(path):\n",
     "    folder = Path(path).absolute()\n",
     "    return [f.name for f in folder.iterdir() if f.is_file()]\n",
     "\n",
+    "#특문 없애기(변화시 생성되어서 지워야함)\n",
     "def clean_text(text):\n",
     "    return re.sub(r\"[^\\w\\s.,!?;:\\-]\", \"\", text)\n",
     "\n",
+    "#wos에서 엑셀 받은것 병합\n",
     "def prep_concat(excel_list):\n",
     "\n",
     "    concat_list = []\n",
-    "\n",
+    "    #쓸 열 만 남기기\n",
     "    def cutted_df(excel_name):\n",
     "        d = pd.read_excel(excel_name)\n",
     "        d = d[COLUMN]\n",
@@ -52,14 +55,14 @@
     "    \n",
     "    for e in excel_list:\n",
     "        concat_list.append(cutted_df(RAW + e))\n",
-    "\n",
+    "    #중복제거 및 특문 제거\n",
     "    result = pd.concat(concat_list, axis=0, ignore_index=True)\n",
     "    result = result.drop_duplicates(subset=COLUMN)\n",
     "    result['Article Title'] = result['Article Title'].apply(clean_text)\n",
     "    result['Abstract'] = result['Abstract'].apply(clean_text)\n",
     "    \n",
     "    return result\n",
-    "\n",
+    "#경로의 엑셀 모두 하나의 csv로 저장\n",
     "def make_one_csv(e, file_name):\n",
     "    m = prep_concat(e)\n",
     "    m.to_csv(file_name, index=False)"
@@ -72,6 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#날짜 부여\n",
     "def make_date_csv(file_name):\n",
     "    df = pd.read_csv(file_name)\n",
     "    df = multi.df_multi_process(df, multi.add_date)\n",
@@ -85,6 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#각 task용 데이터에 맞게 전처리\n",
     "def make_lda_data(file_name):\n",
     "    lda_data = pd.read_csv(file_name)\n",
     "    lda_data = multi.df_multi_process(lda_data, multi.text_prep, 6)\n",
@@ -102,6 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#종합 실행\n",
     "def make_data(raw_path, file_name):\n",
     "    make_one_csv(excel_list(raw_path), file_name)\n",
     "    make_date_csv(file_name)\n",
@@ -110,6 +116,38 @@
     "\n",
     "#make_data(RAW, FILE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "639ad0e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2574236",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "304332a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac72958f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
