--- a/과제/code/prep.ipynb
+++ b/과제/code/prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "27c25cae",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "17d801d5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0e8f6928",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e2a6a220",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9bf6454c",
    "metadata": {},
    "outputs": [],
@@ -102,28 +102,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3d853630",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\miniconda3\\envs\\tm\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:57: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
+      "  return bound(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "#종합 실행\n",
     "def make_data(raw_path, file_name):\n",
-    "    make_one_csv(excel_list(raw_path), file_name)\n",
-    "    make_date_csv(file_name)\n",
+    "    #make_one_csv(excel_list(raw_path), file_name)\n",
+    "    #make_date_csv(file_name)\n",
     "    make_lda_data(file_name)\n",
-    "    make_bertopic_data(file_name)\n",
+    "    #make_bertopic_data(file_name)\n",
     "\n",
-    "#make_data(RAW, FILE)"
+    "make_data(RAW, FILE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "639ad0e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
