--- a/과제/code/crawl.ipynb
+++ b/과제/code/crawl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "32714155",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tm",
+   "display_name": "gensim_lda",
    "language": "python",
    "name": "python3"
   },
@@ -135,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
